force-app/main/default/objects/System_Log__c/fields/Automation_Name__c.field-meta.xml
<CustomField>
    <fullName>Automation_Name__c</fullName>
    <label>Automation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>