force-app/main/default/objects/System_Log__c/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Config Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>