force-app/main/default/objects/System_Log__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>