force-app/main/default/objects/System_Log__c/fields/CSV_Row__c.field-meta.xml
<CustomField>
    <fullName>CSV_Row__c</fullName>
    <label>CSV Row</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>