force-app/main/default/objects/System_Log__c/fields/ERP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Status__c</fullName>
    <description>Sync status with external OMS.</description>
    <label>ERP Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>