force-app/main/default/objects/System_Log__c/fields/Source_Email__c.field-meta.xml
<CustomField>
    <fullName>Source_Email__c</fullName>
    <label>Source Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>