force-app/main/default/objects/System_Log__c/recordTypes/Apex_Exception.recordType-meta.xml
<RecordType>
    <fullName>Apex_Exception</fullName>
    <active>true</active>
    <label>Apex Exception</label>
</RecordType>