force-app/main/default/objects/System_Log__c/recordTypes/Automation.recordType-meta.xml
<RecordType>
    <fullName>Automation</fullName>
    <active>true</active>
    <label>Automation Log</label>
</RecordType>