force-app/main/default/objects/System_Log__c/recordTypes/Error_Monitoring.recordType-meta.xml
<RecordType>
    <fullName>Error_Monitoring</fullName>
    <active>true</active>
    <description>Record type for tracking all types of system errors — integration failures, apex exceptions, and automation errors.</description>
    <label>Error Monitoring</label>
</RecordType>