force-app/main/default/objects/System_Log__c/recordTypes/Integration_Incoming.recordType-meta.xml
<RecordType>
    <fullName>Integration_Incoming</fullName>
    <active>true</active>
    <label>Integration - Incoming Log</label>
</RecordType>