force-app/main/default/objects/System_Log__c/recordTypes/Integration_Outgoing.recordType-meta.xml
<RecordType>
    <fullName>Integration_Outgoing</fullName>
    <active>true</active>
    <label>Integration - Outgoing Log</label>
</RecordType>